# orch

./: .gitignore  Cargo.toml  LICENSE  README.md  guide.md  install.sh  issues.md  orch-build.md  orchestrate.md  phases.md  prompt.txt  work.md
.github/workflows/: release-stable.yml  release.yml
AGENT/: .windsurfrules  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  GEMINI.md  prompt.txt
AGENT/.claude/agents/: daemon-runtime-engineer.md  harness-context-curator.md  orchestra-orchestrator.md  qa-reliability-reviewer.md  rust-foundation-engineer.md  staleness-observability-engineer.md  template-sync-engineer.md  writeback-protocol-engineer.md
AGENT/.codex/: config.toml
AGENT/.codex/agents/: qa-reliability-reviewer.toml  rust-foundation-engineer.toml
AGENT/.cursor/rules/: 00-orchestra-core.mdc  30-status-observability.mdc  40-daemon-writeback.mdc
AGENT/.gemini/: config.yaml  styleguide.md
AGENT/.github/: copilot-instructions.md
AGENT/.github/agents/: harness-context-curator.agent.md  qa-reliability-reviewer.agent.md  rust-foundation-engineer.agent.md  staleness-observability-engineer.agent.md  template-sync-engineer.agent.md  writeback-protocol-engineer.agent.md
AGENT/.windsurf/rules/: 00-orchestra-core.md  10-rust-foundation.md  30-status-observability.md  60-harness-alignment.md
AGENT/.windsurf/skills/orchestra-writeback-protocol/: SKILL.md
AGENT/antigravity/agents/: template-sync-engineer.md
AGENT/cursor/skills/orchestra-daemon-watcher/: SKILL.md
AGENT/gemini/agents/: harness-context-curator.md  writeback-protocol-engineer.md
AGENT/windsurf/agents/: daemon-runtime-engineer.md
AGENT/windsurf/skills/orchestra-staleness-observability/: SKILL.md
orchestra/: .guide.md  pilot.md
orchestra-cli/: Cargo.toml
orchestra-cli/src/: main.rs
orchestra-cli/src/commands/: daemon.rs  diff.rs  doctor.rs  init.rs  mod.rs  offboard.rs  onboard.rs  project.rs  reset.rs  status.rs  sync.rs  update.rs
orchestra-cli/tests/: doctor_checks.rs  dry_run_sync.rs  help_commands.rs  onboard_flow.rs  phase04_daemon_autosync.rs  phase05_writeback_propagation.rs  recovery_flows.rs  status_and_diff.rs
orchestra-core/: Cargo.toml
orchestra-core/src/: error.rs  lib.rs  registry.rs  types.rs
orchestra-core/tests/: registry_tests.rs  roundtrip.rs
orchestra-daemon/: Cargo.toml
orchestra-daemon/src/: error.rs  launchd.rs  lib.rs  log_rotation.rs  paths.rs  protocol.rs  runtime.rs
orchestra-detector/: Cargo.toml
orchestra-detector/src/: lib.rs
orchestra-detector/tests/: detect_tests.rs  scan_agent_files.rs
orchestra-renderer/: Cargo.toml
orchestra-renderer/src/: context.rs  engine.rs  error.rs  lib.rs
orchestra-renderer/src/templates/: antigravity.md.tera  antigravity_skill_orchestra_sync.md.tera  claude.md.tera  claude_rules.md.tera  claude_subagent_reviewer.md.tera  claude_subagent_worker.md.tera  cline.md.tera  cline_skill_orchestra_sync.md.tera  codex.md.tera  codex_skill_orchestra_sync.md.tera  copilot.md.tera  copilot_path.instructions.md.tera  cursor.mdc.tera  cursor_skill_orchestra_sync.md.tera  gemini_instructions.md.tera  gemini_settings.json.tera  gemini_skill_orchestra_sync.md.tera  gemini_styleguide.md.tera  guide.md.tera  pilot.md.tera  windsurf.md.tera  windsurf_skill_orchestra_sync.md.tera
orchestra-renderer/src/templates/_partials/: conventions_inline.tera  conventions_section.tera  header.tera  orchestra_workflow.tera  skills.tera  stack.tera  subagent_delegation.tera  tasks.tera  worktree_instructions.tera
orchestra-renderer/tests/: phase02_template_rendering.rs
orchestra-sync/: Cargo.toml
orchestra-sync/src/: backup.rs  diff.rs  error.rs  hash_store.rs  lib.rs  pipeline.rs  staleness.rs  writer.rs
orchestra-sync/src/writeback/: applier.rs  log.rs  mod.rs  parser.rs  strip.rs  types.rs
orchestra-sync/tests/: phase03_staleness.rs
orchestra/controls/: AGENTS.md  CLAUDE.md  GEMINI.md
orchestra/controls/.agent/rules/: orchestra.md
orchestra/controls/.claude/agents/: orchestra-reviewer.md  orchestra-worker.md  qa-reliability-reviewer.md  staleness-observability-engineer.md  template-sync-engineer.md
orchestra/controls/.claude/rules/: orchestra.md
orchestra/controls/.clinerules/: orchestra.md
orchestra/controls/.codex/agents/: daemon-runtime-engineer.toml  harness-context-curator.toml  orchestra-orchestrator.toml  staleness-observability-engineer.toml  (+2 more)
orchestra/controls/.gemini/: settings.imported.json  settings.json  styleguide.md
orchestra/controls/.github/: copilot-instructions.md
(+38 files in other folders)
