[package]
name = "orchestra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orchestra"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
orchestra-core = { path = "../orchestra-core" }
orchestra-sync = { path = "../orchestra-sync" }
orchestra-daemon = { path = "../orchestra-daemon" }
dirs = "5"
colored = "2"
tabled = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
