[package]
name = "orchestra-detector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestra-core = { path = "../orchestra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
rstest = "0.18"
tempfile = "3"
