[package]
name = "orchestra-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestra-core = { path = "../orchestra-core" }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
